--- a/app/views/event/index.html.erb
+++ b/app/views/event/index.html.erb
@@ -7,3 +7,6 @@
     </li>
   <% end%>
 </ul>
+
+<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
+<%= button_to "Log In", user_session_path %>
